--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -147,18 +147,18 @@ table {
     padding: .5em 0;
 }
 
-.new_user{
+.new_employee{
     max-width: 786px;
     margin: auto;
 }
 
-#update_user .form-group,
-#add_user .form-group{
+#update_employee .form-group,
+#add_employee .form-group{
     margin: .4em 0;
 }
 
-#update_user .form-group input[type="text"],
-#add_user .form-group input[type="text"]{
+#update_employee .form-group input[type="text"],
+#add_employee .form-group input[type="text"]{
     width: 100%;
     padding: .6em 1em;
     margin: .5em 0;
@@ -168,8 +168,8 @@ table {
     border-radius: .2em;
 }
 
-#update_user .form-group .radio,
-#add_user .form-group .radio{
+#update_employee .form-group .radio,
+#add_employee .form-group .radio{
     margin: 1em 2em;
 }
 
@@ -213,8 +213,8 @@ table {
     background: #b4b4b4;
 }
 
-#update_user .form-group .btn,
-#add_user .form-group .btn{
+#update_employee .form-group .btn,
+#add_employee .form-group .btn{
     width: 100%;
     padding: .9em 1em;
     background-color:#16db93; 
@@ -226,8 +226,8 @@ table {
     margin: .5em 0;
 }
 
-#update_user .form-group .btn:hover,
-#add_user .form-group .btn:hover{
+#update_employee .form-group .btn:hover,
+#add_employee .form-group .btn:hover{
     background-color: var(--dark);
     color: var(--border);
 }
